# nutstore-bot

./: .gitignore  AGENTS.md  README.md  checklist.md
sidecar/: .gitignore  README.md  __init__.py  agent_memory_projection.py  api_server.py  attachment_store.py  cli.py  demo_cli_provider_model.sh  direct_model.py  discovery.py  gateway_model.py  local_code_executor.py  local_paths.py  model.py  native_code_agent.py  provider_catalog.py  provider_service.py  pyproject.toml  repositories.py  run_cancellation.py  run_cli.ps1  run_cli.sh  run_event_store.py  run_events.py  run_service.py  runtime_service.py  secret_store.py  sensitive_write_guard.py  session_manager.py  session_service.py  storage.py  timeline_service.py  tools.py  worker.py  workspace_sidecar_indexer.py
sidecar/.tmp-runtime-smoke/: service.json  sidecar-client.json  sidecar.db
sidecar/docs/: ACP_Conversation_Runtime_Refactor.md  GraalPy_Feasibility_for_CLI_Startup.md  PLAN.md  anthropic.md  auth_login.md  cli_workspace_session.md  deepseek.md  gemini.md  openai.md
sidecar/python_runtime/: __init__.py  api_server.py  auth.py  context_builder.py  direct_model.py  discovery.py  local_code_executor.py  local_paths.py  memory.py  native_code_agent.py  provider_catalog.py  provider_service.py  redaction.py  repositories.py  run_events.py  runtime_service.py  secret_store.py  sensitive_write_guard.py  session_manager.py  tools.py  worker.py
sidecar/scripts/: build_packaged_cli.sh  build_pyinstaller_sidecar.sh  prepare_search_tools.py
sidecar/src/: __init__.py  api_server.py  attachment_store.py  auth.py  cli.py  client_config.py  provider_service.py  redaction.py  run_service.py  runtime_service.py  session_manager.py  session_service.py  storage.py  tools.py  worker.py
sidecar/src/nsbot/: __init__.py
sidecar/src/nsbot/api/: acp_app.py  acp_session.py  acp_stdio.py
sidecar/src/nsbot/application/: provider_service.py  session_service.py  timeline_service.py  turn_service.py
sidecar/src/nsbot_sidecar/: __init__.py  cli.py
sidecar/tests/: __init__.py  conftest.py  e2e_agent_cli.sh  e2e_packaged_acp_cli.sh  e2e_packaged_cli.sh  test_acp_app.py  test_acp_session.py  test_acp_stdio.py  test_acp_ws.py  test_api_server.py  test_cli_auth.py  test_cli_provider_model.py  test_context_builder.py  test_direct_model.py  test_local_code_executor.py  test_local_paths.py  test_memory_consolidation.py  test_provider_catalog.py  test_provider_service.py  test_redaction.py  test_repositories.py  test_run_events.py  test_runtime_engine.py  test_runtime_service.py  test_secret_store.py  test_sensitive_write_guard.py  test_session_manager.py  test_show_native_code_agent_system_prompt.py  test_storage.py  test_tools.py  test_worker.py  test_workspace_indexer.py  test_workspace_sidecar_indexer.py
sidecar/tests/acp_ts_client/: package.json  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/runtime/: launcher.rs  mod.rs
(+211 files in other folders)
