[project]
name = "python-runtime"
version = "0.1.0"
description = "Python runtime for the native code agent"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.0",
  "fastapi>=0.115.0",
  "litellm>=1.51.0",
  "python-multipart>=0.0.9",
  "requests",
  "smolagents",
  "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
