[project]
name = "python-runtime"
version = "0.1.0"
description = "Python runtime for the native code agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "litellm>=1.51.0",
  "mammoth>=1.8.0",
  "markdownify>=0.14.1",
  "openpyxl>=3.1.5",
  "pypdf>=5.4.0",
  "python-multipart>=0.0.9",
  "requests",
  "smolagents[litellm,openai,toolkit]",
  "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
