[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "nsbot-sidecar"
version = "0.1.0"
description = "NSBot sidecar service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "litellm>=1.51.0",
  "mammoth>=1.8.0",
  "markdownify>=0.14.1",
  "openpyxl>=3.1.5",
  "pypdf>=5.4.0",
  "python-multipart>=0.0.9",
  "requests",
  "smolagents[litellm,openai,toolkit]",
  "typer>=0.12.0",
  "uvicorn>=0.32.0",
  "websockets>=15.0.1",
  "wsproto>=1.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/nsbot_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
