[package]
name = "nutstore-bot-desktop"
version = "0.1.0"
description = "NutstoreBot desktop shell"
authors = ["NutstoreBot"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[features]
default = []
