[package]
name = "nutstore-bot-desktop"
version = "0.1.0"
description = "NutstoreBot desktop shell"
authors = ["NutstoreBot"]
edition = "2021"
default-run = "nutstore-bot-desktop"

[[bin]]
name = "nsbot"
path = "src/bin/nsbot.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-native-roots"] }
url = "2"

[features]
default = []
